--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ Temporary Items
 .apdisk
 .Rproj.user
 Crosslands/.Rhistory
+Crosslands/rsconnect/documents/CrosslandsDemo.Rmd/shinyapps.io/bcrary/envirodiy_crosslandsdemo.dcf
